syntax = "proto3";

option csharp_namespace = "server.Protos";

package computer;

service Computer{
	rpc GetMyComputer (GetMyComputerRequest) returns (GetMyComputerRespond);
}

message ComputerInfo {
	bytes id = 1;
	string name = 2;
	bytes owner = 3;
	bytes root_directory = 4;
}

message GetMyComputerRequest {}

message GetMyComputerRespond {
	ComputerInfo info = 1;
}
